[package]
name = "blademaster"
version = "0.2.1"
description = "A text-based roguelike game"
authors = ["Maxwell Anderson <maxwell.brayden.anderson@gmail.com>"]
edition = "2018"
repository = "https://github.com/Maxgy/blademaster"
license = "MIT"

[dependencies]
crossterm = "0.14"
legion = "0.2"
rand = "0.7"
tui = { version = "0.8", default-features = false, features = ["crossterm"] }
