[package]
name = "blademaster"
version = "0.2.1"
description = "A text-based roguelike game"
authors = ["Maxwell Anderson <maxwell.brayden.anderson@gmail.com>"]
edition = "2018"
repository = "https://github.com/Maxgy/blademaster"
license = "MIT"
keywords = ["text", "game", "dungeon", "rogue", "roguelike"]
categories = ["games", "game-engines"]

[dependencies]
legion = "0.2"
rand = "0.7"
bracket-lib = { git = "https://github.com/thebracket/bracket-lib", features = [ "threaded" ] }
