[package]
name = "blademaster"
version = "0.3.0"
description = "A text-based roguelike game"
authors = ["Maxwell Anderson <maxwell.brayden.anderson@gmail.com>"]
edition = "2018"
repository = "https://github.com/Maxgy/blademaster"
license = "MIT"
keywords = ["text", "game", "dungeon", "rogue", "roguelike"]
categories = ["games", "game-engines"]

[dependencies]
legion = "0.3"
rand = "0.7"
bracket-lib = { git = "https://github.com/Maxgy/bracket-lib", features = [ "threaded" ] }

